Fixed wrapping of negative prices in email tables

--- a/frontend/shared/components/src/editor/email.mixin.scss
+++ b/frontend/shared/components/src/editor/email.mixin.scss
@@ -144,6 +144,10 @@
             }
         }
 
+        td.price {
+            white-space: nowrap;
+        }
+
         thead {
             font-weight: bold;
 
